--- a/Fake_Real_News.ipynb
+++ b/Fake_Real_News.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "3d8881a1-7ffc-4d83-9e49-cc3512cc3b21",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "id": "41ace85a-ae35-4a99-9e29-b7544e0b008b",
    "metadata": {},
    "outputs": [
@@ -28,13 +28,13 @@
     }
    ],
    "source": [
-    "fakeNews = [line.rstrip() for line in open('fake_real_news/Fake.csv')]\n",
+    "fakeNews = [line.rstrip() for line in open('Fake.csv')]\n",
     "print(len(fakeNews))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "id": "191c3ae6-8c05-474e-83bd-6eb047698bfc",
    "metadata": {},
    "outputs": [
@@ -47,13 +47,13 @@
     }
    ],
    "source": [
-    "realNews = [line.rstrip() for line in open('fake_real_news/True.csv')]\n",
+    "realNews = [line.rstrip() for line in open('True.csv')]\n",
     "print(len(realNews))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "id": "0041dbbc-3c8b-4cb4-a640-7932baeb0bb6",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "019744f8-7564-4ddc-abd2-d22f4d1af277",
    "metadata": {},
    "outputs": [
@@ -151,18 +151,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "id": "721f6d52-ee85-4242-8554-e6e234ce088f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fakeData = pd.read_csv('fake_real_news/Fake.csv')\n",
-    "realData = pd.read_csv('fake_real_news/True.csv')"
+    "fakeData = pd.read_csv('Fake.csv')\n",
+    "realData = pd.read_csv('True.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "id": "b80d0af7-f1c1-449f-9ad9-89b4a7259ff8",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
        "2  December 30, 2017  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "id": "05aa4c06-5bf0-44fe-9bee-38296aaed6a0",
    "metadata": {},
    "outputs": [
@@ -341,18 +341,18 @@
        "4  December 29, 2017   "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "realData.head(5)\n"
+    "realData.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "id": "cd2917d4-1d4b-485c-a7ef-f893719d69f9",
    "metadata": {},
    "outputs": [],
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "id": "b588f124-9ef8-4f79-8b6e-433669fc16ff",
    "metadata": {},
    "outputs": [],
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "id": "7dc9bdde-a947-4004-80ca-b1d118fea426",
    "metadata": {},
    "outputs": [
@@ -475,7 +475,7 @@
        "4  December 25, 2017      0  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "id": "9bbc0dff-df94-4e6e-92bd-2360a5bd709a",
    "metadata": {},
    "outputs": [
@@ -496,7 +496,7 @@
        "array(['News', 'politics', 'politicsNews'], dtype=object)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 23,
    "id": "3b877146-9f2d-44ac-8610-c68a4dd203e0",
    "metadata": {},
    "outputs": [
@@ -585,7 +585,7 @@
        "      <th>0</th>\n",
        "      <td>10000</td>\n",
        "      <td>9998</td>\n",
-       "      <td>McConnell Says He’ll Obstruct ANY Effort To H...</td>\n",
+       "      <td>HILLARY TWEETS MESSAGE In Defense Of DACA…OOPS...</td>\n",
        "      <td>2</td>\n",
        "      <td>10000</td>\n",
        "      <td>9997</td>\n",
@@ -627,7 +627,7 @@
        "       title                                                                 \\\n",
        "       count unique                                                top freq   \n",
        "Label                                                                         \n",
-       "0      10000   9998   McConnell Says He’ll Obstruct ANY Effort To H...    2   \n",
+       "0      10000   9998  HILLARY TWEETS MESSAGE In Defense Of DACA…OOPS...    2   \n",
        "1      10000   9891  Factbox: Trump fills top jobs for his administ...   14   \n",
        "\n",
        "        text                                                                 \\\n",
@@ -649,7 +649,7 @@
        "1      115  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "id": "d0080f6f-3795-4550-a604-4b2cf7fdf8db",
    "metadata": {},
    "outputs": [
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "id": "fdbfa296-8796-4029-adf8-92919f6e6418",
    "metadata": {},
    "outputs": [
@@ -733,7 +733,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "id": "3662676f-3ee1-4706-b01e-1b08035763df",
    "metadata": {},
    "outputs": [],
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 27,
    "id": "e616bc07-0347-40dc-8b15-cb5e03aa2486",
    "metadata": {},
    "outputs": [
@@ -822,7 +822,7 @@
        "4  Pope Francis used his annual Christmas Day mes...      0"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 28,
    "id": "61debe14-6f13-43ad-9025-32a9857049b0",
    "metadata": {},
    "outputs": [
@@ -907,7 +907,7 @@
        "4  Pope Francis used his annual Christmas Day mes...      0    2346"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 29,
    "id": "b02e117e-5a8a-463c-8560-645f8a9b76b7",
    "metadata": {},
    "outputs": [],
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 30,
    "id": "40cedca7-8935-4bef-b1ff-7e8e1da80977",
    "metadata": {},
    "outputs": [
@@ -943,7 +943,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 31,
    "id": "01c215ce-86ed-47cf-a64f-7d6d5b370f08",
    "metadata": {},
    "outputs": [
@@ -977,7 +977,7 @@
        "       <AxesSubplot:title={'center':'1'}>], dtype=object)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 32,
    "id": "57f2de8a-5086-4d1a-b899-72eaba9f1589",
    "metadata": {},
    "outputs": [],
@@ -1013,32 +1013,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 33,
    "id": "d3bfb58a-b591-454f-b17f-4a4ec05dc683",
    "metadata": {},
    "outputs": [],
    "source": [
     "def text_preprocessing(news):\n",
-    "    \"\"\"\n",
-    "    Takes in a string of text, then performs the following:\n",
-    "    1. Remove all punctuation\n",
-    "    2. Remove all stopwords\n",
-    "    3. Returns a list of the cleaned text\n",
-    "    \"\"\"\n",
     "        \n",
-    "    # Check characters to see if they are in punctuation\n",
     "    nopunctuation = [char for char in news if char not in string.punctuation]\n",
-    "\n",
-    "    # Join the characters again to form the string.\n",
+    "    \n",
     "    nopunctuation = ''.join(nopunctuation)\n",
     "    \n",
-    "    # Now just remove any stopwords\n",
     "    return [word for word in nopunctuation.split() if word.lower() not in stopwords.words('english')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 34,
    "id": "801929e3-bcb3-404e-bec8-fa2ce6b860cf",
    "metadata": {},
    "outputs": [
@@ -1053,7 +1044,7 @@
        "Name: text, dtype: object"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,12 +1055,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "ef5fad03-a8b3-467a-96f5-d62d53c42363",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#vectorization\n"
+    "#vectorization\n",
+    "from sklearn.feature_extraction.text import CountVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "6b6870fb-3a01-4595-ac4a-9c460cac67c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "news_vectorisation = CountVectorizer(analyzer=text_preprocessing).fit(newsData['text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "71ba3a0e-6caf-4e23-ac71-f1c25bc6bfac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "news_vector = news_vectorisation.transform(newsData['text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "15676064-a576-4162-845d-631735895afb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of Sparse Matrix:  (20000, 181420)\n",
+      "Amount of Non-Zero occurences:  3625584\n"
+     ]
+    }
+   ],
+   "source": [
+    "#sparse matrix\n",
+    "print( news_vector.shape)\n",
+    "print( news_vector.nnz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "1ecb20db-992c-433a-b015-29b54df8bf31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sparsity: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "sparsity = (100.0 * news_vector.nnz / (news_vector.shape[0] * news_vector.shape[1]))\n",
+    "print('sparsity: {}'.format(round(sparsity)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "97f813a0-0674-4c14-a223-69f4ff4fac18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TF-IDF\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "tfidf = TfidfTransformer().fit(news_vector)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "dc7d7944",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20000, 181420)\n"
+     ]
+    }
+   ],
+   "source": [
+    "news_tfidf = tfidf.transform(news_vector)\n",
+    "print(news_tfidf.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "669f33ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "fakenews_detect_model = MultinomialNB().fit(news_tfidf, newsData['text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76c7dc73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = fakenews_detect_model.predict(news_tfidf)\n",
+    "print(predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc8e3638",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#classification report\n",
+    "from sklearn.metrics import classification_report\n",
+    "print (classification_report(newsData['text'], predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1dfbd9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#predict\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "msg_train, msg_test, label_train, label_test = \\\n",
+    "train_test_split(messages['message'], messages['label'], test_size=0.2)\n",
+    "\n",
+    "print(len(msg_train), len(msg_test), len(msg_train) + len(msg_test))"
    ]
   }
  ],
